# developer-landing-backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
api/: index.py
app/: __init__.py  config.py  main.py
app/api/routes/: contact.py  health.py  metrics.py
app/core/: errors.py  logging.py
app/middleware/: request_logging.py
app/repositories/: __init__.py  base.py  factory.py  file_store.py  redis_store.py
app/schemas/: __init__.py  contact.py
app/services/: ai_service.py  contact_service.py  email_service.py
docs/superpowers/specs/: 2026-06-20-developer-landing-backend-design.md
examples/: api.http  postman_collection.json
frontend/: index.html
frontend/static/: app.js  styles.css
tests/: conftest.py  test_contact.py
