[project]
name = "developer-landing-backend"
version = "1.0.0"
description = "Backend service for a developer's landing presentation (REST API + AI integration)."
requires-python = ">=3.10"
readme = "README.md"

# Runtime dependencies. Kept in sync with requirements.txt — Vercel's uv-based
# Python builder installs from this list.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "email-validator>=2.1",
    "anthropic>=0.40",
    "resend>=2.0",
    "upstash-redis>=1.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
